logs/jawaf.log
Listing '.'...
Listing './bin'...
Compiling './bin/jawaf-admin.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jawaf-0.3.5.egg-info'...
Listing './lib/python3.5/site-packages/jawaf'...
Listing './lib/python3.5/site-packages/jawaf/adapters'...
Listing './lib/python3.5/site-packages/jawaf/adapters/db'...
Compiling './lib/python3.5/site-packages/jawaf/adapters/db/__init__.py'...
***   File "./lib/python3.5/site-packages/jawaf/adapters/db/__init__.py", line 12
    raise ServerError(f'Unsupported DB Backend {engine}')
                                                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/jawaf/admin'...
Listing './lib/python3.5/site-packages/jawaf/auth'...
Listing './lib/python3.5/site-packages/jawaf/auth/management'...
Listing './lib/python3.5/site-packages/jawaf/auth/management/commands'...
Listing './lib/python3.5/site-packages/jawaf/bin'...
Compiling './lib/python3.5/site-packages/jawaf/conf.py'...
***   File "./lib/python3.5/site-packages/jawaf/conf.py", line 62
    project_settings_spec = importlib.util.spec_from_file_location(f'jawaf.project.settings', project_settings_path)
                                                                                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jawaf/db.py'...
***   File "./lib/python3.5/site-packages/jawaf/db.py", line 38
    module = import_module(f'{app}.tables')
                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jawaf/exceptions.py'...
***   File "./lib/python3.5/site-packages/jawaf/exceptions.py", line 21
    super(ValidationError, self).__init__(f'{message}: {invalidated_fields}')
                                                                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/jawaf/management'...
Compiling './lib/python3.5/site-packages/jawaf/management/__init__.py'...
***   File "./lib/python3.5/site-packages/jawaf/management/__init__.py", line 75
    raise ManagementError(f'Error processing command file: {command_import}')
                                                                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jawaf/management/base.py'...
***   File "./lib/python3.5/site-packages/jawaf/management/base.py", line 79
    raise CommandError(f'{target_name} conflicts with an existing module. Please try another name.')
                                                                                                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/jawaf/management/commands'...
Compiling './lib/python3.5/site-packages/jawaf/server.py'...
***   File "./lib/python3.5/site-packages/jawaf/server.py", line 65
    routes_spec = importlib.util.spec_from_file_location(f'{self.name}{prefix}.routes', routes_import)
                                                                                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/jawaf/templates'...
Listing './lib/python3.5/site-packages/jawaf/templates/app_template'...
Listing './lib/python3.5/site-packages/jawaf/templates/app_template/tests'...
Listing './lib/python3.5/site-packages/jawaf/templates/project_template'...
Listing './lib/python3.5/site-packages/jawaf/templates/project_template/project_name'...
Listing './lib/python3.5/site-packages/jawaf/templates/project_template/project_name/templates'...
Listing './lib/python3.5/site-packages/jawaf/utils'...
Compiling './lib/python3.5/site-packages/jawaf/utils/testing.py'...
***   File "./lib/python3.5/site-packages/jawaf/utils/testing.py", line 19
    'origin': f'https://{sanic.testing.HOST}:{sanic.testing.PORT}/',
                                                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jawaf/validators.py'...
***   File "./lib/python3.5/site-packages/jawaf/validators.py", line 36
    clean = getattr(self, f'clean_{key}', None)
                                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
